typo in index.jade; missing s

--- a/views/index.jade
+++ b/views/index.jade
@@ -12,7 +12,7 @@ block content
         for room in rooms
           a(href="##{room.name}") #{room.name}
     section.vertical
-      ul#message
+      ul#messages
         li#template
           span.at 20:23
           span.by Max
